--- a/package.json
+++ b/package.json
@@ -5,27 +5,32 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently --kill-others -n \"build,start\" -c \"magenta.bold,cyan.bold\" \"pnpm:devBuild\" \"pnpm:devRun\"",
+    "dev": "pnpm run prettier && pnpm run lint && concurrently -n \"build,start\" -c \"magenta.bold,cyan.bold\" \"pnpm:devBuild\" \"pnpm:devRun\"",
     "devBuild": "tsup src/index.ts --watch",
     "devRun": "node --env-file=.env --watch dist/index.js",
     "build": "tsup",
     "start": "node --env-file=.env ./dist/index.js",
-    "lint": "eslint 'src/**/*.{js,ts}'",
-    "prettier": "prettier --config .prettierrc --write 'src/**/*.{js,ts}'"
+    "lint": "eslint \"src/**/*.{js,ts}\"",
+    "prettier": "prettier --config .prettierrc --write 'src/**/*.{js,ts}'",
+    "test:unit": "vitest --config ./vitest.config.js",
+    "test:integration": "vitest --config ./vitest.config.integration.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.17",
+    "@prisma/client": "^5.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "nanoid": "^5.0.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.3",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "concurrently": "^8.2.2",
@@ -37,7 +42,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.2.2",
+    "prisma": "^5.8.1",
+    "supertest": "^6.3.4",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.1",
+    "vitest-mock-extended": "^1.3.1"
   }
 }
