--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true
-  }
+  },
+  "exclude": ["./src/tests"]
 }
