--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "pnpm run prettier && pnpm run lint && concurrently -n \"build,start\" -c \"magenta.bold,cyan.bold\" \"pnpm:devBuild\" \"pnpm:devRun\"",
     "devBuild": "tsup src/index.ts --watch",
     "devRun": "node --env-file=.env --watch dist/index.js",
-    "build": "tsup",
+    "build": "npm install && tsup",
     "start": "node --env-file=.env ./dist/index.js",
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "prettier": "prettier --config .prettierrc --write 'src/**/*.{js,ts}'",
